:Increased scroll speed, reduced font size

--- a/css/hugo-academic.css
+++ b/css/hugo-academic.css
@@ -21,14 +21,15 @@
 }
 
 html {
+  text-align: justify;
   font-family: 'Merriweather', serif;
-  font-size: 16px;
+  font-size: 11px;
   color: rgba(0,0,0,0.8);
   line-height: 1.65;
 }
 @media screen and (min-width: 58rem) {
   html {
-    font-size: 20px;
+    font-size: 15px;
   }
 }
 
@@ -50,7 +51,7 @@ body {
 /* Body text */
 p {
   margin-top: 0;
-  margin-bottom: 1rem;
+  margin-bottom: 1rem;  
 }
 
 /* Lists */
@@ -178,7 +179,7 @@ blockquote p:last-child {
 
 .home-section {
   background-color: rgb(255, 255, 255);
-  padding: 110px 0 110px 0;
+  padding: 60px 0 60px 0;
 }
 @media screen and (max-width: 768px) {
   .home-section {
