--- a/css/hugo-academic.css
+++ b/css/hugo-academic.css
@@ -29,7 +29,7 @@ html {
 }
 @media screen and (min-width: 58rem) {
   html {
-    font-size: 15px;
+    font-size: 16px;
   }
 }
 
@@ -292,6 +292,12 @@ ul.ul-edu li .description p.institution {
   color: rgba(0,0,0,0.6);
 }
 
+.about-edu {
+  table-layout: fixed;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /*************************************************
  *  Sharing
  **************************************************/
@@ -420,6 +426,12 @@ ul.share li:hover .fa {
 /*************************************************
  *  Publications
  **************************************************/
+
+.pub-img{
+  width:90%;
+  margin-left: 0;
+  margin-right: auto;
+}
 
 .pub-icon {
   color: #03396c;
@@ -725,12 +737,12 @@ table > tfoot > tr > td {
   padding: 8px;
   line-height: 1.43;
   vertical-align: top;
-  border-top: 1px solid #ddd;
+  /* border-top: 1px solid #ddd; */
 }
 
 table > thead > tr > th {
   vertical-align: bottom;
-  border-bottom: 2px solid #ddd;
+  /* border-bottom: 2px solid #ddd; */
 }
 
 table > caption + thead > tr:first-child > th,
